hphp/hack/test/typecheck/variadics/ellipsis_strict_mode.php.like_types.exp
File "ellipsis_strict_mode.php", line 6, characters 10-20:
Cannot use ... without a parameter name in strict mode. Please add a parameter name. (Typing[4223])
File "ellipsis_strict_mode.php", line 6, characters 10-20:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 10, characters 8-19:
Cannot use ... without a parameter name in strict mode. Please add a parameter name. (Typing[4223])
File "ellipsis_strict_mode.php", line 11, characters 9-24:
Cannot use ... without a parameter name in strict mode. Please add a parameter name. (Typing[4223])
File "ellipsis_strict_mode.php", line 17, characters 5-46:
Cannot use ... without a parameter name in strict mode. Please add a parameter name. (Typing[4223])
File "ellipsis_strict_mode.php", line 17, characters 5-46:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 24, characters 7-18:
Cannot use ... without a parameter name in strict mode. Please add a parameter name. (Typing[4223])
File "ellipsis_strict_mode.php", line 24, characters 7-18:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 28, characters 7-28:
Cannot use ... without a parameter name in strict mode. Please add a parameter name. (Typing[4223])
File "ellipsis_strict_mode.php", line 28, characters 7-28:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 31, characters 10-14:
Cannot use ... without a type hint and parameter name in strict mode. Please add a type hint and parameter name. (Typing[4223])
